--- a/index.html
+++ b/index.html
@@ -87,7 +87,43 @@
     </section>
   </main>
 
+  <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
   <script>
+    window.TrackJS && TrackJS.install({ 
+      token: "2af13028d66345db8eb00311ca9ae1c0"
+      // for more configuration options, see https://docs.trackjs.com
+    });
+    TrackJS.track('Testing TrackJS!');
+  </script>
+                        
+  <script>
+    class ValidationError extends Error {
+      constructor(message) {
+        super(message);
+        this.name = "ValidationError";
+      }
+    }
+    
+    function test (x, y, operator) {
+      if (isNaN(x) || isNaN(y)) {
+        TrackJS.track('At least one of the input value is empty');
+        throw new ValidationError('Enter two validate inputs value');
+      }
+
+      let first = parseInt(x);
+      let second = parseInt(y);
+      if(operator === "+") {
+        return first + second;
+      } else if(op === "-") {
+        return one - two;
+      } else if(op === "*") {
+        return one * two;
+      } else if(op === "/") {
+        return one / two;
+      }
+    };
+
+
     let form = document.querySelector('form');
     form.addEventListener('submit', e => {
       e.preventDefault();
@@ -95,13 +131,96 @@
       let firstNum = document.querySelector('#first-num').value;
       let secondNum = document.querySelector('#second-num').value;
       let operator = document.querySelector('#operator').value;
-      output.innerHTML = eval(`${firstNum} ${operator} ${secondNum}`);
+      // output.innerHTML = eval(`${firstNum} ${operator} ${secondNum}`);
+      let value = null;
+      try {
+        value = test(firstNum, secondNum, operator); 
+      } catch(err) {
+        console.error(err.message);
+        console.error(err.name);
+        console.error(err.stack);
+      } finally {
+        output.value = !isNaN(value) ? value : "Incorrect Input"; 
+      }
     });
 
     let errorBtns = Array.from(document.querySelectorAll('#error-btns > button'));
 
     // Start your code here
     // You may move this JS to another file if you wish
+    errorBtns[0].onclick = () => {
+      console.log('Console Log Demo');
+    }
+    errorBtns[1].onclick = () => {
+      console.error('Console Error Demo');
+    }
+    errorBtns[2].onclick = () => {
+      console.count('counting');
+    }
+    errorBtns[3].onclick = () => {
+      console.warn('Console Warn Button');
+    }
+    errorBtns[4].onclick = () => {
+      const number = 2;
+      const errorMsg = "The number does not equal 3"
+      console.assert(number == 3, {number, errorMsg});
+    }
+    errorBtns[5].onclick = () => {
+      console.clear();
+    }
+    errorBtns[6].onclick = () => {
+      console.dir(document.getElementsByTagName('button'));
+    }
+    errorBtns[7].onclick = () => {
+      console.dirxml(document.getElementsByTagName('button'));
+    }
+    errorBtns[8].onclick = () => {
+      const label = 'console.group';
+      console.groupCollapsed(label);
+      console.info('Leo');
+      console.info('Mike');
+      console.info('Don');
+      console.info('Raph');
+    }
+    errorBtns[9].onclick = () => {
+      const label = 'console.group';
+      console.groupEnd(label);
+    }
+    errorBtns[10].onclick = () => {
+      console.table([
+        {
+          name: 'Software Engineering',
+          num: 110,
+        },
+        {
+          name: 'Programming Language',
+          num: 130,
+        },
+        {
+          name: 'Advanced Software',
+          num: 112,
+        }
+      ]);
+    }
+    errorBtns[11].onclick = () => {
+      console.time('Timer Button');
+      for (var i = 0; i < 100000; i++) {
+        let square = i ** 2;
+      }
+    }
+    errorBtns[12].onclick = () => {
+      console.timeEnd('Timer Button');
+    }
+    errorBtns[13].onclick = () => {
+      const deep = () => { deeper(); };
+      const deeper = () => { deepest(); };
+      const deepest = () => { console.trace(); };
+      deep();
+    }
+    errorBtns[14].onclick = () => {
+      console.log("Error happens, go to do tests!");
+    }
+
   </script>
 </body>
 
